<resources>
    <string name="app_name">Games RF</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="realm_label">Realm:</string>
    <string name="friendship_label">Friendship:</string>
    <string name="fatality_label">Fatality:</string>
    <string name="brutality_label">Brutality:</string>
    <string name="no_connection_msg">Sin conexión a internet</string>
    <string name="title_label">Title</string>
    <string name="description_label">Description</string>
    <string name="kombats_label">Retro Fights:</string>
    <string name="stop_music_btn_label">Stop Music</string>
    <string name="last_known_location_label">Last known location:</string>
    <string name="mk_label">MK</string>
    <string name="wiki_label">Wiki</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button_label">Ingresar</string>
    <string name="new_user_btn_label">Registrarse</string>
    <string name="forgot_pass_label">¿Olvidó su contraseña? Restablecer aquí</string>
    <string name="email_verify_msg">El correo de verificación ha sido enviado</string>
    <string name="varify_email_erro_msg">No se pudo enviar el correo de verificación</string>
    <string name="usr_created_confirm_msg">Usuario creado</string>
    <string name="forgot_password_msg">Restablecer contraseña</string>
    <string name="email_redo_msg">Ingrese su correo para recibir el enlace para restablecer</string>
    <string name="redo_email_confirm_msg">El enlace para restablecer la contraseña ha sido enviado a su correo</string>
    <string name="email_error_msg">Favor de ingresar la dirección de correo</string>
    <string name="auth_succed_msg">Autenticación exitosa</string>
    <string name="email_format_error_msg">Error: El correo electrónico no tiene un formato correcto</string>
    <string name="password_error_msg">Error: La contraseña no es válida</string>
    <string name="unconsistent_error_msg">Error: Una cuenta ya existe con el mismo correo, pero con diferentes datos de ingreso</string>
    <string name="email_used_error_msg">Error: el correo electrónico ya está en uso con otra cuenta.</string>
    <string name="session_expiration_error_msg">Error: La sesión ha expirado. Favor de ingresar nuevamente.</string>
    <string name="user_not_found_error_msg">Error: No existe el usuario con la información proporcionada.</string>
    <string name="password_incorrect_error_msg">La contraseña porporcionada es inválida</string>
    <string name="unestable_conn_error_msg">Red no disponible o se interrumpió la conexión</string>
    <string name="auth_unsucced_msg">Error. No se pudo autenticar exitosamente.</string>
    <string name="email_req_msg">Se requiere el correo</string>
    <string name="password_requirements_msg">Se requiere una contraseña o la contraseña no tiene por lo menos 6 caracteres</string>
    <string name="cancel_btn_label">Cancelar</string>
    <string name="send_btn_msg">Enviar</string>
</resources>